# TAP_rgz

./: CMakeLists.txt  README.md  main.cpp  main.qml
Controller/: CMakeLists.txt  GenerateController.cpp  GenerateController.hpp
Model/: CMakeLists.txt  GenerateModel.cpp  GenerateModel.hpp  TableModel.cpp  TableModel.h
TestGrammaticks/: Output.txt  Output2.txt  tesst_5.txt  test_1.txt  test_2.txt  test_3.txt  test_4.txt
View/: CMakeLists.txt  DialogWindow.qml  MainScreen.cpp  MainScreen.hpp  MainScreen.qml
